--- a/BlazorAppEFTenant/NewTenantApp/NewTenantApp.Client/Pages/DetalleUsuarioCliente.razor
+++ b/BlazorAppEFTenant/NewTenantApp/NewTenantApp.Client/Pages/DetalleUsuarioCliente.razor
@@ -4,7 +4,9 @@
 @using DataBase.Genericos
 @using DataBase.Modelo
 @using DataBase.Servicios
-@layout MainClientLayout
+@using Microsoft.AspNetCore.Components.Authorization;
+@using System.Security;
+@* @layout MainClientLayout *@
 
 @using BlazorAppEFTenant.Client.Layout
 @inject IUnitOfWorkFactory UnitOfWorkFactory 
@@ -15,13 +17,13 @@
 
 <PageTitle> Detalle Cliente</PageTitle>
 
-<p>TenantId <strong>@ContextProvider.TenantId</strong>:</p>
-<p>ContextKeDb <strong>@ContextProvider.DbKey</strong>:</p>
-<p>Mode <strong>@ContextProvider.ConnectionMode</strong>:</p>
-<p>Token <strong>@ContextProvider.Token</strong>:</p>
-@if (@ContextProvider.ConnectionMode != "Ef")
+<p>TenantId <strong>@ContextProvider._AppState.TenantId</strong>:</p>
+<p>ContextKeDb <strong>@ContextProvider._AppState.DbKey</strong>:</p>
+<p>Mode <strong>@ContextProvider._AppState.ConnectionMode</strong>:</p>
+<p>Token <strong>@ContextProvider._AppState.Token</strong>:</p>
+@if (@ContextProvider._AppState.ConnectionMode != "Ef")
 {
-    <p>ApiName <strong>@ContextProvider.ApiName</strong>:</p>
+    <p>ApiName <strong>@ContextProvider._AppState.ApiName</strong>:</p>
 }
 
 <div class="container">
@@ -113,8 +115,9 @@
     {
         if (firstRender)
         {
-            await ContextProvider.ReadContext();
-            seguridad = ServicioSeguridad.GetDataFromToken(ContextProvider.Token);
+            AuthenticationState AppState= await ContextProvider.GetAuthenticationStateAsync();
+           
+            seguridad = ServicioSeguridad.GetDataFromToken(ContextProvider._AppState.Token);
             await CargarAsync();
             
         }
