--- a/BlazorAppEFTenant/NewTenantApp/NewTenantApp/Components/Pages/DetalleUsuario.razor
+++ b/BlazorAppEFTenant/NewTenantApp/NewTenantApp/Components/Pages/DetalleUsuario.razor
@@ -11,9 +11,9 @@
 @implements IDisposable
 
 
-<p>TenantId <strong>@ContextProvider.TenantId</strong>:</p>
-<p>ContextKeDb <strong>@ContextProvider.DbKey</strong>:</p>
-<p>ApiName <strong>@ContextProvider.ApiName</strong>:</p>
+<p>TenantId <strong>@ContextProvider._AppState.TenantId</strong>:</p>
+<p>ContextKeDb <strong>@ContextProvider._AppState.DbKey</strong>:</p>
+<p>ApiName <strong>@ContextProvider._AppState.ApiName</strong>:</p>
 
 <div class="container">
     @if (NewUser != null)
@@ -107,8 +107,9 @@
     {
         if (firstRender)
         {
-            await ContextProvider.ReadContext();
-            seguridad = ServicioSeguridad.GetDataFromToken(ContextProvider.Token);
+                AuthenticationState AppState = await ContextProvider.GetAuthenticationStateAsync();
+        
+            seguridad = ServicioSeguridad.GetDataFromToken(ContextProvider._AppState.Token);
             await CargarAsync();
             StateHasChanged();
         }
