--- a/BlazorAppEFTenant/NewTenantApp/NewTenantApp/Components/Pages/ListaUsuariosMultipleTenant.razor
+++ b/BlazorAppEFTenant/NewTenantApp/NewTenantApp/Components/Pages/ListaUsuariosMultipleTenant.razor
@@ -13,13 +13,13 @@
 <h3>Listado de usuarios Multiple Tenant (Genérico)</h3>
 
 
-<p>TenantId <strong>@ContextProvider.TenantId</strong>:</p>
-<p>ContextKeDb <strong>@ContextProvider.DbKey</strong>:</p>
-<p>Mode <strong>@ContextProvider.ConnectionMode</strong>:</p>
-<p>Token <strong>@ContextProvider.Token</strong>:</p>
-@if (@ContextProvider.ConnectionMode != "Ef")
+<p>TenantId <strong>@ContextProvider._AppState.TenantId</strong>:</p>
+<p>ContextKeDb <strong>@ContextProvider._AppState.DbKey</strong>:</p>
+<p>Mode <strong>@ContextProvider._AppState.ConnectionMode</strong>:</p>
+<p>Token <strong>@ContextProvider._AppState.Token</strong>:</p>
+@if (@ContextProvider._AppState.ConnectionMode != "Ef")
 {
-    <p>ApiName <strong>@ContextProvider.ApiName</strong>:</p>
+    <p>ApiName <strong>@ContextProvider._AppState.ApiName</strong>:</p>
 }
 
 @if (usuarios is null)
@@ -92,11 +92,12 @@ else
     {
         try
         {
-            await ContextProvider.ReadContext();
+                AuthenticationState AppState = await ContextProvider.GetAuthenticationStateAsync();
+        
             IContextProvider cp = ContextProvider.Copia();
             foreach (var tenant in cp.GetTenantIds())
             {
-                cp.TenantId = tenant;
+                cp._AppState.TenantId = tenant;
                 var user = new ServicioUsuarios(cp, UnitOfWorkFactory);
                 var list = await user.GetAllAsync();
                 usuarios.AddRange(list);
