--- a/BlazorAppEFTenant/NewTenantApp/NewTenantApp/Components/_Imports.razor
+++ b/BlazorAppEFTenant/NewTenantApp/NewTenantApp/Components/_Imports.razor
@@ -9,3 +9,4 @@
 @using BlazorAppEFTenant
 @using BlazorAppEFTenant.Client
 @using BlazorAppEFTenant.Components
+@using Microsoft.AspNetCore.Components.Authorization
