--- a/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026.Client/Pages/Counter.razor
+++ b/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026.Client/Pages/Counter.razor
@@ -1,5 +1,8 @@
 ﻿@page "/counter"
-@rendermode InteractiveAuto
+@rendermode InteractiveWebAssembly
+@using Microsoft.AspNetCore.Components.Authorization
+@using System.Security.Claims
+@inject AuthenticationStateProvider AuthStateProvider
 
 <PageTitle>Counter</PageTitle>
 
@@ -15,5 +18,19 @@
     private void IncrementCount()
     {
         currentCount++;
+    }
+
+    private ClaimsPrincipal? user;
+    private string? AppState;
+    private string? TenantId;
+    private string? DbKey;
+    protected override async Task OnInitializedAsync()
+    {
+        var state = await AuthStateProvider.GetAuthenticationStateAsync();
+        user = state.User;
+
+        AppState = user.FindFirst("AppState")?.Value;
+        TenantId = user.FindFirst("TenantId")?.Value;
+        DbKey = user.FindFirst("DbKey")?.Value;
     }
 }
