--- a/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026/Components/Account/Pages/Login.razor
+++ b/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026/Components/Account/Pages/Login.razor
@@ -11,6 +11,12 @@
 @inject NavigationManager NavigationManager
 @inject IdentityRedirectManager RedirectManager
 
+@using DataBase
+@using DataBase.Genericos
+@using System.Security.Claims
+ @inject ITokenService TokenService
+@inject IContextProvider ContextProvider 
+
 <PageTitle>Log in</PageTitle>
 
 <h1>Log in</h1>
@@ -84,6 +90,8 @@
     [SupplyParameterFromQuery]
     private string? ReturnUrl { get; set; }
 
+    bool _initialized = false;
+
     protected override async Task OnInitializedAsync()
     {
         Input ??= new();
@@ -127,7 +135,11 @@
         if (result.Succeeded)
         {
             Logger.LogInformation("User logged in.");
-            RedirectManager.RedirectTo(ReturnUrl);
+
+
+            var loginToken = $"/LoginToken?email={Uri.EscapeDataString(Input.Email)}&password={Uri.EscapeDataString(Input.Password)}";
+            RedirectManager.RedirectTo(loginToken);
+           // RedirectManager.RedirectTo(ReturnUrl);
         }
         else if (result.RequiresTwoFactor)
         {
@@ -138,6 +150,7 @@
         else if (result.IsLockedOut)
         {
             Logger.LogWarning("User account locked out.");
+            
             RedirectManager.RedirectTo("Account/Lockout");
         }
         else
@@ -145,6 +158,44 @@
             errorMessage = "Error: Invalid login attempt.";
         }
     }
+
+    protected override async Task OnAfterRenderAsync(bool firstRender)
+    {
+        if (!_initialized)
+        {
+             await createContext();
+             _initialized = true;
+             await InvokeAsync(StateHasChanged);
+        }
+    }
+
+
+    private async Task createContext()
+    {
+        var appUser = await UserManager.FindByEmailAsync(Input.Email);
+        var userClaims = await UserManager.GetClaimsAsync(appUser);
+
+        // añadir roles si no están como claims:
+        var roles = await UserManager.GetRolesAsync(appUser);
+            foreach (var role in roles)
+            {
+                string rol = role;
+                string claimType = System.Security.Claims.ClaimTypes.Role;
+                userClaims.Add( new System.Security.Claims.Claim(claimType,rol));
+            }
+
+   
+        // generar JWT
+        var token = TokenService.GenerateToken(userClaims);
+
+        // guardar token en tu ContextProvider para toda la app
+        await ContextProvider.UpdateTokenContext(token);
+
+        Logger.LogInformation("User logged in.");
+        RedirectManager.RedirectTo(ReturnUrl);
+    }
+    
+
 
     private sealed class InputModel
     {
