--- a/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026/Components/Account/Pages/Login.razor
+++ b/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026/Components/Account/Pages/Login.razor
@@ -12,7 +12,7 @@
 @inject IdentityRedirectManager RedirectManager
 
 @using DataBase
-@using DataBase.Genericos
+@using Cliente
 @using System.Security.Claims
  @inject ITokenService TokenService
 @inject IContextProvider ContextProvider 
