--- a/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026/Components/Pages/LoginToken.razor
+++ b/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026/Components/Pages/LoginToken.razor
@@ -1,6 +1,7 @@
 ﻿@page "/LoginToken"
 @rendermode InteractiveServer
-@using DataBase.Genericos
+@using DataBase
+@using Cliente
 
 @inject IHttpClientFactory HttpFactory
 @inject IContextProvider ContextProvider
