--- a/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026/Components/Pages/Weather.razor
+++ b/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026/Components/Pages/Weather.razor
@@ -1,5 +1,6 @@
 ﻿@page "/weather"
-@using DataBase.Genericos
+@using DataBase
+@using Cliente
 @attribute [StreamRendering]
 @rendermode InteractiveServer
 @inject IContextProvider ContextProvider
